# tychentropy

./: Cargo.toml
examples/: solution_d6_to_ent.rs  test.rs
src/: error.rs  lib.rs
src/domain/: mnemonics.rs  mod.rs  tychentropy.rs
src/domain/process/: error.rs  mod.rs
src/domain/process/input/: mod.rs  natural_datum.rs  new.rs
src/domain/statistics/: error.rs  mod.rs  statistical_tests_results.rs  uniform_random_test.rs
src/utils/: domain_utils.rs  error.rs  mod.rs  test_utils.rs
